@@ -1,3 +1,10 @@
+2011-04-20 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* sdas/linksrc/aslink.dsp: added lksdcdb.c
+	* sdas/linksrc/aslink.h,
+	* sdas/linksrc/lknoice.c(NoICEfopen),
+	* sdas/linksrc/lkmain.c(main): factored out NoICEfopen
+
 2011-04-18 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* sdas/linksrc/Makefile.in,
